#   Copyright (c) 2024, Anton Gorshkov
#   All rights reserved.
#
#   This code is for a merkle_tree and its unit tests.
#   For any questions or concerns, please contact Anton Gorshkov at antoniooreany@gmail.com

class MerkleTree:
    def __init__(self, leaves):
        self.leaves = leaves
        self.nodes = []

    def build_tree(self):
        # Placeholder for building Merkle tree
        pass

    def get_root(self):
        # Placeholder for getting Merkle root
        return "merkle_root"

    def get_proof(self, leaf):
        # Placeholder for getting proof
        pass

    def verify_proof(self, leaf, proof):
        # Placeholder for verifying proof
        pass
